# ClipShare

./: Cargo.toml  Readme.md
migrations/: 001_initialize_database.sql
src/lib/: mod.rs
src/lib/data/: mod.rs  model.rs  query.rs
src/lib/domain/: time.rs
src/lib/domain/clip/: mod.rs
src/lib/domain/clip/field/: content.rs  created_at.rs  expires_at.rs  id.rs  mod.rs  password.rs  short_code.rs  title.rs  views.rs
src/lib/service/: action.rs  ask.rs  mod.rs
src/lib/web/: api.rs  ctx.rs  form.rs  http.rs  mod.rs  renderer.rs  views.rs
templates/: base.hbs  clip.hbs  home.hbs
